Revert due to layout issues when window is narrow: UiMediaSoupV3WebRtcClient: fix wobbling video

--- a/teamapps-client/less/components/UiMediaSoupV3WebRtcClient.less
+++ b/teamapps-client/less/components/UiMediaSoupV3WebRtcClient.less
@@ -33,7 +33,6 @@
   justify-content: center;
 
   .video-container {
-    flex: 0px 1 0; // make sure the browser does NOT apply "auto"! The video should simply take the remaining space.
     position: relative;
     line-height: 0;
     transition: box-shadow 500ms;
